Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.
  
  after Zope 2.10.0 RC 1 (unreleased)

    Bugs fixed

  Zope 2.10.0 beta 2 (2006/09/17)

    Bugs fixed

      - Collector #2117: Don't choke in 'unrestrictedTraverse' for '+'
        path elements.

      - Collector #2185: Log username for FCGI requests.

      - Collector #2152: Fixed MailHost documentation; simple_send does not
        process or validate its arguments in any way.

      - Collector #2175: ZTUtils.make_hidden_input did not escape double-quotes.

      - Collector #2176: Fixed bad logging call.

      - Collector #1907: Moved 'alt' property from File to Image.

      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
        Zope startup to fail.

      - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.

      - Collector #2178: Fix ZopeTestCase doctest support for layers

  Zope 2.10.0 beta 2 (2006/08/20)

    Bugs Fixed

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Updated Five to stable 1.5 release.

      - Traversal order changes were causing WebDAV requests which used
        acquisition to fail.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

      - Fix #2141: TALES doesn't traverse correctly over 'repeat'
        variable

      - reStructuredText/ZReST: setting raw_enabled to 0 for security
        reasons

      - Collector #2113:  'zopectl test' masked Ctrl-C.

      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - OFS Application: Updated deprecation warnings.