@@ -8,6 +8,9 @@ Zope Changes
 
     Bugs fixed
 
+      - Call setDefaultSkin on new requests created as the result of
+        ConflictError retries.
+      
   Zope 2.10.0 beta 2 (2006/09/17)
 
     Bugs fixed
